--- a/AFIIngles/app/src/main/res/layout/activity_main.xml
+++ b/AFIIngles/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         app:cardBackgroundColor="@color/cardview_dark_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardViewIVogaisCurtasd">
 
         <Button
-            android:id="@+id/button22"
+            android:id="@+id/btnVc01"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -97,7 +97,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button23"
+            android:id="@+id/btnVc02"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -109,74 +109,73 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button24"
+            android:id="@+id/btnVc03"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="#73DFD2"
             android:text="b"
-            android:textColor="#E84C4C"
+            android:textColor="#D32F2F"
             android:textSize="30dp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button25"
+            android:id="@+id/btnVc04"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="#73DFD2"
             android:text="c"
-            android:textColor="#E84C4C"
+            android:textColor="#D32F2F"
             android:textSize="30dp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/btnVc05"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="#73DFD2"
             android:text="e"
-            android:textColor="#E84C4C"
+            android:textColor="#D32F2F"
             android:textSize="30dp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button27"
+            android:id="@+id/btnVc06"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="#73DFD2"
             android:text="g"
-            android:textColor="#E84C4C"
+            android:textColor="#D32F2F"
             android:textSize="30dp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button28"
+            android:id="@+id/btnVc07"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="#73DFD2"
             android:text="h"
-            android:textColor="#E84C4C"
+            android:textColor="#D32F2F"
             android:textSize="30dp"
             android:textStyle="bold" />
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/cardViewVgLongasId"
         android:layout_width="189dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         app:cardBackgroundColor="@color/cardview_dark_background"
-        app:layout_constraintBottom_toTopOf="@+id/btnVogaisCurtas"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn">
 
@@ -196,19 +195,19 @@
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
-        android:id="@+id/btnVogaisCurtas"
-        android:layout_width="0dp"
+        android:id="@+id/btnVogaisLongasId"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:background="@color/white"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:flow_horizontalAlign="start"
+        app:flow_verticalAlign="center"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintTop_toBottomOf="@+id/cardViewVgLongasId">
 
         <Button
-            android:id="@+id/button22"
+            android:id="@+id/btnVl01"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -219,7 +218,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button23"
+            android:id="@+id/btnVl02"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
@@ -231,64 +230,187 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button24"
+            android:id="@+id/btnVl03"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="#73DFD2"
             android:text="b"
-            android:textColor="#E84C4C"
+            android:textColor="#D32F2F"
             android:textSize="30dp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button25"
+            android:id="@+id/btnVl04"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="#73DFD2"
             android:text="c"
-            android:textColor="#E84C4C"
+            android:textColor="#D32F2F"
             android:textSize="30dp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button26"
+            android:id="@+id/btnVl05"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="#73DFD2"
             android:text="e"
-            android:textColor="#E84C4C"
+            android:textColor="#D32F2F"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewDitId"
+        android:layout_width="189dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="@color/cardview_dark_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnVogaisLongasId">
+
+        <TextView
+            android:id="@+id/texViewDitId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:fontFamily="sans-serif-black"
+            android:gravity="center_vertical"
+            android:text="DITONGOS"
+            android:textAlignment="inherit"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:id="@+id/btnDitongosId"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardViewDitId">
+
+        <Button
+            android:id="@+id/btnDit01Id"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#73DFD2"
+            android:text="I"
+            android:textColor="#D32F2F"
             android:textSize="30dp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button27"
+            android:id="@+id/btnDit02Id"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:background="#73DFD2"
+            android:text="a"
+            android:textColor="#D32F2F"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnDit03Id"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:background="#73DFD2"
+            android:text="c"
+            android:textColor="#D32F2F"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnDit04Id"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:background="#73DFD2"
+            android:text="e"
+            android:textColor="#D32F2F"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnDit05Id"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="#73DFD2"
             android:text="g"
-            android:textColor="#E84C4C"
+            android:textColor="#D32F2F"
             android:textSize="30dp"
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button28"
+            android:id="@+id/btnDit06Id"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="#73DFD2"
             android:text="h"
-            android:textColor="#E84C4C"
+            android:textColor="#D32F2F"
             android:textSize="30dp"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnDit07"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:background="#73DFD2"
+            android:text="h"
+            android:textColor="#D32F2F"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/txtViewSelecaoDitId"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnDitongosId"
+        app:layout_constraintVertical_bias="0.311">
+
+        <Button
+            android:id="@+id/btnDitSelecao01Id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#73DFD2"
+            android:text="I"
+            android:textColor="#D32F2F"
+            android:textSize="80dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
