Inserindo todos o botões com os simbolos do AFI

--- a/AFIEnglishOnly/app/src/main/res/layout/fragment_first.xml
+++ b/AFIEnglishOnly/app/src/main/res/layout/fragment_first.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="a"
+                android:text="e"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -48,7 +48,7 @@
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="e"
+                android:text="ɒ"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -68,7 +68,7 @@
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="i"
+                android:text="ə"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -88,7 +88,7 @@
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="z"
+                android:text="ʊ"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -108,7 +108,7 @@
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="u"
+                android:text="ʌ"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -128,7 +128,7 @@
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="s"
+                android:text="æ"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -147,10 +147,8 @@
                 android:layout_marginStart="3dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
-                android:layout_marginEnd="52dp"
-                android:layout_marginRight="52dp"
                 android:background="@drawable/rounded_corner"
-                android:text="p"
+                android:text="ɪ"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -165,7 +163,6 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:background="@drawable/rounded_card_corner"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
@@ -178,15 +175,12 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.003" />
+                app:layout_constraintVertical_bias="0.047" />
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="75dp"
-                android:layout_marginEnd="205dp"
-                android:layout_marginRight="205dp"
                 android:background="@drawable/rounded_card_corner"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
@@ -199,8 +193,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                app:layout_constraintVertical_bias="0.004" />
+                app:layout_constraintTop_toBottomOf="@+id/button12"
+                app:layout_constraintVertical_bias="0.06" />
 
             <Button
                 android:id="@+id/button2"
@@ -211,7 +205,7 @@
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="I"
+                android:text="iː"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -231,7 +225,7 @@
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="I"
+                android:text="ɔː"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -249,7 +243,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="I"
+                android:text="ɑː"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -258,7 +252,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="0.002" />
 
             <Button
                 android:id="@+id/button4"
@@ -269,7 +263,7 @@
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="I"
+                android:text="ɜː"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -289,7 +283,7 @@
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
-                android:text="I"
+                android:text="uː"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -304,7 +298,6 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="75dp"
                 android:background="@drawable/rounded_card_corner"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
@@ -316,8 +309,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
-                app:layout_constraintVertical_bias="0.016" />
+                app:layout_constraintTop_toBottomOf="@+id/button"
+                app:layout_constraintVertical_bias="0.094" />
 
             <Button
                 android:id="@+id/button8"
@@ -329,7 +322,7 @@
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
                 android:shadowColor="#0B0A0A"
-                android:text="I"
+                android:text="ɪə"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -350,7 +343,7 @@
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
                 android:shadowColor="#0B0A0A"
-                android:text="I"
+                android:text="eɪ"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -371,7 +364,7 @@
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
                 android:shadowColor="#0B0A0A"
-                android:text="I"
+                android:text="əʊ"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -392,7 +385,7 @@
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
                 android:shadowColor="#0B0A0A"
-                android:text="I"
+                android:text="eə"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -413,7 +406,7 @@
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
                 android:shadowColor="#0B0A0A"
-                android:text="I"
+                android:text="əʊ"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -432,11 +425,9 @@
                 android:layout_marginStart="3dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="2dp"
-                android:layout_marginEnd="59dp"
-                android:layout_marginRight="59dp"
                 android:background="@drawable/rounded_corner"
                 android:shadowColor="#0B0A0A"
-                android:text="I"
+                android:text="ɔɪ"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -455,7 +446,7 @@
                 android:layout_marginTop="2dp"
                 android:background="@drawable/rounded_corner"
                 android:shadowColor="#0B0A0A"
-                android:text="I"
+                android:text="aɪ"
                 android:textAllCaps="false"
                 android:textColor="@color/red_700"
                 android:textSize="35dp"
@@ -464,6 +455,25 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
+                app:layout_constraintVertical_bias="0.004" />
+
+            <Button
+                android:id="@+id/button60"
+                style="@android:style/Widget.Holo.Button.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:background="@drawable/rounded_corner"
+                android:shadowColor="#0B0A0A"
+                android:text="ʊə"
+                android:textAllCaps="false"
+                android:textColor="@color/red_700"
+                android:textSize="35dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button6"
                 app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
