--- a/AFIEnglishOnly/app/src/main/res/layout/fragment_first.xml
+++ b/AFIEnglishOnly/app/src/main/res/layout/fragment_first.xml
@@ -21,7 +21,7 @@
             android:paddingRight="4dp">
 
             <Button
-                android:id="@+id/button12"
+                android:id="@+id/btnVc01Id"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button12"
+                app:layout_constraintStart_toEndOf="@+id/btnVc01Id"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -120,7 +120,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/button17"
+                android:id="@+id/btnVc06Id"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -155,46 +155,48 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button17"
+                app:layout_constraintStart_toEndOf="@+id/btnVc06Id"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/textView3"
+                style="@style/Widget.AppCompat.TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/rounded_card_corner"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
-                android:text="Vogais Curtas"
+                android:text="Curtas"
                 android:textColor="@color/white"
-                android:textSize="30dp"
-                android:textStyle="bold"
+                android:textSize="26dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.047" />
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/textView"
+                style="@style/Widget.AppCompat.TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/rounded_card_corner"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
                 android:shadowColor="#FFFFFF"
-                android:text="Vogais Longas"
+                android:text="Longas"
                 android:textColor="@color/white"
-                android:textSize="30dp"
-                android:textStyle="bold"
+                android:textSize="26dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button12"
-                app:layout_constraintVertical_bias="0.06" />
+                app:layout_constraintTop_toBottomOf="@+id/btnVc01Id"
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
                 android:id="@+id/button2"
@@ -298,19 +300,19 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/rounded_card_corner"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
                 android:text="Ditongos"
                 android:textColor="@color/white"
-                android:textSize="30dp"
-                android:textStyle="bold"
+                android:textSize="26dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/button"
-                app:layout_constraintVertical_bias="0.094" />
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
                 android:id="@+id/button8"
@@ -475,6 +477,24 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/button6"
                 app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/mostraBotaoId"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/rounded_corner"
+                android:gravity="center"
+                android:text="?"
+                android:textColor="@color/red_700"
+                android:textSize="60dp"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button60"
+                app:layout_constraintVertical_bias="0.306" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
