--- a/AFIEnglishOnly/app/src/main/res/layout/fragment_sec.xml
+++ b/AFIEnglishOnly/app/src/main/res/layout/fragment_sec.xml
@@ -21,7 +21,7 @@
             android:paddingRight="4dp">
 
             <Button
-                android:id="@+id/btnVc01Id"
+                android:id="@+id/btnVc1"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
                 tools:ignore="TouchTargetSizeCheck" />
 
             <Button
-                android:id="@+id/button13"
+                android:id="@+id/btnVc2"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -55,12 +55,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/btnVc01Id"
+                app:layout_constraintStart_toEndOf="@+id/btnVc1"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/button14"
+                android:id="@+id/btnVc3"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -75,12 +75,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button13"
+                app:layout_constraintStart_toEndOf="@+id/btnVc2"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/button15"
+                android:id="@+id/btnVc4"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -95,12 +95,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button14"
+                app:layout_constraintStart_toEndOf="@+id/btnVc3"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/button16"
+                android:id="@+id/btnVc5"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -115,12 +115,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button15"
+                app:layout_constraintStart_toEndOf="@+id/btnVc4"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/btnVc06Id"
+                android:id="@+id/btnVc6"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -135,12 +135,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button16"
+                app:layout_constraintStart_toEndOf="@+id/btnVc5"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/button18"
+                android:id="@+id/btnVc7"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -155,7 +155,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/btnVc06Id"
+                app:layout_constraintStart_toEndOf="@+id/btnVc6"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -174,7 +174,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnVc01Id"
+                app:layout_constraintTop_toBottomOf="@+id/btnVc1"
                 app:layout_constraintVertical_bias="0.0"
                 tools:ignore="TouchTargetSizeCheck" />
 
@@ -196,7 +196,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/btn01"
-                app:layout_constraintTop_toBottomOf="@+id/button13"
+                app:layout_constraintTop_toBottomOf="@+id/btnVc2"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
@@ -216,7 +216,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/btn02"
-                app:layout_constraintTop_toBottomOf="@+id/button14"
+                app:layout_constraintTop_toBottomOf="@+id/btnVc3"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
@@ -236,7 +236,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/btn03"
-                app:layout_constraintTop_toBottomOf="@+id/button14"
+                app:layout_constraintTop_toBottomOf="@+id/btnVc3"
                 app:layout_constraintVertical_bias="0.0"
                 tools:ignore="TouchTargetSizeCheck" />
 
@@ -257,7 +257,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/btn04"
-                app:layout_constraintTop_toBottomOf="@+id/button16"
+                app:layout_constraintTop_toBottomOf="@+id/btnVc5"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
@@ -277,7 +277,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/btn08"
-                app:layout_constraintTop_toBottomOf="@+id/button18"
+                app:layout_constraintTop_toBottomOf="@+id/btnVc7"
                 app:layout_constraintVertical_bias="0.0"
                 tools:ignore="TouchTargetSizeCheck" />
 
@@ -298,7 +298,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.009"
                 app:layout_constraintStart_toEndOf="@+id/btn05"
-                app:layout_constraintTop_toBottomOf="@+id/button16"
+                app:layout_constraintTop_toBottomOf="@+id/btnVc5"
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
@@ -311,7 +311,7 @@
                 android:paddingRight="2dp"
                 android:text="Sonoras"
                 android:textColor="#FFFFFF"
-                android:textSize="26dp"
+                android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -330,7 +330,7 @@
                 android:shadowColor="#FFFFFF"
                 android:text="Mudas"
                 android:textColor="#FFFFFF"
-                android:textSize="26dp"
+                android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -339,7 +339,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btnVl2"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -354,12 +354,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button"
+                app:layout_constraintStart_toEndOf="@+id/btnVl1"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btnVl5"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -374,12 +374,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button4"
+                app:layout_constraintStart_toEndOf="@+id/btnVl4"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btnVl1"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -397,7 +397,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/btnVl4"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -412,12 +412,12 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button5"
+                app:layout_constraintStart_toEndOf="@+id/btnVl3"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/btnVl3"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -432,7 +432,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button2"
+                app:layout_constraintStart_toEndOf="@+id/btnVl2"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -452,7 +452,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button3"
+                app:layout_constraintStart_toEndOf="@+id/btnVl5"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -489,7 +489,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button"
+                app:layout_constraintTop_toBottomOf="@+id/btnVl1"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
@@ -529,7 +529,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/button007"
-                app:layout_constraintTop_toBottomOf="@+id/button2"
+                app:layout_constraintTop_toBottomOf="@+id/btnVl2"
                 app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
