--- a/AFI10/app/src/main/res/layout/recycler_itens_view.xml
+++ b/AFI10/app/src/main/res/layout/recycler_itens_view.xml
@@ -6,19 +6,18 @@
     android:layout_gravity="center"
     android:layout_margin="5dp"
     app:cardCornerRadius="5dp"
-    app:cardElevation="5dp">
-
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    app:cardElevation="5dp"
+    app:contentPadding="10dp">
 
         <TextView
             android:id="@+id/recycler_view_itens"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="@dimen/item_recycler_dimen"
-            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content"
             android:drawableTint="@color/black"
-            android:text="TextView" />
-    </LinearLayout>
+            android:gravity="center"
+            android:text="TextView"
+            android:textSize="20dp"
+            android:textAlignment="center"/>
+
+
 </androidx.cardview.widget.CardView>
