--- a/AFI10/app/src/main/res/layout/activity_main.xml
+++ b/AFI10/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,10 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-       android:background="@color/purple_500"
-        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
        android:layout_gravity="center"
         android:background="@color/cyan_50"
        />
