--- a/AFI10/app/src/main/res/menu/menu.xml
+++ b/AFI10/app/src/main/res/menu/menu.xml
@@ -1,24 +1,30 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single"/>
 
     <item
-        android:id="@+id/action_settings"
-        android:icon="@drawable/perfil"
-        android:title="@string/settings"
+        android:id="@+id/project_item"
+        android:icon="@drawable/ic_project"
+        android:title="@string/st_project"
+        app:showAsAction="ifRoom|withText"/>
+
+    <item
+        android:id="@+id/student_item"
+        android:icon="@drawable/ic_student"
+        android:title="@string/st_student"
         app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/action_done"
-        android:icon="@drawable/ic_about"
-        android:title="@string/about"
+        android:id="@+id/professor_item"
+        android:icon="@drawable/ic_professor"
+        android:title="@string/st_professor"
         app:showAsAction="ifRoom|withText"/>
 
     <item
-        android:id="@+id/action_done"
-        android:icon="@drawable/ic_contato"
-        android:title="@string/done"
+        android:id="@+id/about_item"
+        android:icon="@drawable/ic_about"
+        android:title="@string/st_about"
         app:showAsAction="ifRoom|withText"/>
-<group/>
+
 </menu>
