--- a/AFI10/app/src/main/res/layout/recycler_itens_view.xml
+++ b/AFI10/app/src/main/res/layout/recycler_itens_view.xml
@@ -7,7 +7,8 @@
     android:layout_margin="2dp"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
-    app:contentPadding="0dp">
+    app:contentPadding="0dp"
+    >
 
         <TextView
             android:id="@+id/recycler_view_itens"
@@ -16,7 +17,8 @@
             android:drawableTint="@color/black"
             android:gravity="center"
             android:text="TextView"
-            android:textSize="25dp"
+            android:textSize="26dp"
+            android:textStyle="bold"
             android:textAlignment="center"/>
 
 
